--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_cms",
+  "name": "nodeTaxify",
   "version": "1.0.0",
-  "description": "CMS with node",
+  "description": "nodeTaxify using node and express",
   "main": "axios.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.2.0",
     "express-handlebars": "^5.1.0",
     "express-handler": "^0.2.0",
+    "express-promise-router": "^4.0.1",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
     "handlebars": "^4.7.6",
@@ -30,6 +31,7 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "mongoose-url-slugs": "^1.0.2",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
